--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -20,8 +20,8 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://<username>:<password>@<cluster>/<database>?retryWrites=true&w=majority
-      database: <database>
+      uri: mongodb+srv://proxolo:7QYf1BDXuMlJ5y1Q@proxolo.yllmdjv.mongodb.net/?retryWrites=true&w=majority
+      database: starterkit
 
 # Example URI:
 # mongodb+srv://myuser:mypassword@cluster0.abcdef.mongodb.net/mydatabase?retryWrites=true&w=majority
